[tool.poetry]
name = "labello"
version = "0.1.0"
description = ""
authors = ["Norbert Szulc <norbert@not7cd.net>"]

[tool.poetry.dependencies]
python = "^3.6"
flask = "^1.1.2"
peewee = "^3.14.1"
qrcode = "^6.1"
Pillow = "^8.1.1"
gunicorn = "^20.0.4"
jinja2 = "^2.11.3"
python-dotenv = "^0.15.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
