[project]
name = "labello"
version = "0.1.0"
description = ""
requires-python = ">=3.6"
authors = [{ name = "Norbert Szulc", email = "norbert@not7cd.net" }]
dependencies = [
    "flask~=1.1.2",
    "peewee~=3.14.1",
    "qrcode~=6.1",
    "Pillow~=8.1",
    "gunicorn~=20.0.4",
    "jinja2~=2.11.3",
    "python-dotenv~=0.15.0",
]

# [build-system]
# requires = ["uv_build>=0.9.29,<0.10.0"]
# build-backend = "uv_build"
